; ModuleID = '/home/carl/AnghaBench/linux/drivers/bcma/extr_driver_chipcommon_pmu.c_bcma_chipco_pll_maskset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bcma/extr_driver_chipcommon_pmu.c_bcma_chipco_pll_maskset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcma_drv_cc = type { i32 }

@BCMA_CC_PMU_PLLCTL_ADDR = common dso_local global i32 0, align 4
@BCMA_CC_PMU_PLLCTL_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bcma_chipco_pll_maskset(%struct.bcma_drv_cc* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.bcma_drv_cc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.bcma_drv_cc* %0, %struct.bcma_drv_cc** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.bcma_drv_cc*, %struct.bcma_drv_cc** %5, align 8
  %10 = load i32, i32* @BCMA_CC_PMU_PLLCTL_ADDR, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @bcma_pmu_write32(%struct.bcma_drv_cc* %9, i32 %10, i32 %11)
  %13 = load %struct.bcma_drv_cc*, %struct.bcma_drv_cc** %5, align 8
  %14 = load i32, i32* @BCMA_CC_PMU_PLLCTL_ADDR, align 4
  %15 = call i32 @bcma_pmu_read32(%struct.bcma_drv_cc* %13, i32 %14)
  %16 = load %struct.bcma_drv_cc*, %struct.bcma_drv_cc** %5, align 8
  %17 = load i32, i32* @BCMA_CC_PMU_PLLCTL_DATA, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @bcma_pmu_maskset32(%struct.bcma_drv_cc* %16, i32 %17, i32 %18, i32 %19)
  ret void
}

declare dso_local i32 @bcma_pmu_write32(%struct.bcma_drv_cc*, i32, i32) #1

declare dso_local i32 @bcma_pmu_read32(%struct.bcma_drv_cc*, i32) #1

declare dso_local i32 @bcma_pmu_maskset32(%struct.bcma_drv_cc*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
